--- a/vignettes/functions.Rmd
+++ b/vignettes/functions.Rmd
@@ -62,7 +62,8 @@ data("data_s")
 
 The `create_error_bar_df` function creates a dataframe with which a `ggplot2` bar plot (`geom_bar`) with error bars (+/- 1 standard deviation) can easily be created.
 
-The function takes an original data set, a numerical value to summarise, and one or more categorical variables as arguments.
+The function takes an original data set, a numerical value to summarise, and one or more categorical variables as arguments. </br>
+Additionally, the user may specify whether they want to compute the standard deviation (default) or standard error, and whether they wish to compute the base standard deviation/error (default) or a multiple of that, e.g. two times the standard deviation.
 
 ```{r include=T, eval=T}
 # example 1: one categorical variable
@@ -77,11 +78,31 @@ datatable(df1)
 ```{r include=T, eval=T}
 # example 2: more than one categorical variable
 
-df1 <- create_error_bar_df(data = data_s, numerical = "sDur", factors = c("pauseBin", "typeOfS", "folType"))
+df2 <- create_error_bar_df(data = data_s, numerical = "sDur", factors = c("pauseBin", "typeOfS", "folType"))
 ```
 
 ```{r echo=FALSE}
-datatable(df1)
+datatable(df2)
+```
+
+```{r include=T, eval=T}
+# example 3: double standard deviation
+
+df3 <- create_error_bar_df(data = data_s, numerical = "sDur", factors = "pauseBin", size = 2)
+```
+
+```{r echo=FALSE}
+datatable(df3)
+```
+
+```{r include=T, eval=T}
+# example 4: standard error instead of standard deviation
+
+df4 <- create_error_bar_df(data = data_s, numerical = "sDur", factors = "pauseBin", type = "std")
+```
+
+```{r echo=FALSE}
+datatable(df4)
 ```
 
 ---
