--- a/vignettes/data_sets.Rmd
+++ b/vignettes/data_sets.Rmd
@@ -144,7 +144,7 @@ Schmitz, D. (2018). Tonal Alignment and Segmental Composition in German. Master'
 
 Schmitz, D. & Esser, J. (2021). SfL: Statistics for Linguistics. URL: https://github.com/dosc91/SfL
 
-Schmitz, D., Baer-Henney, D., & Plag, I. (submitted). Revision invited by Phonetica.
+Schmitz, D., Baer-Henney, D., & Plag, I. (submitted). The duration of word-final /s/ differs across morphological categories in English: Evidence from pseudowords. Revision invited by Phonetica.
 
 Schmitz, D., Cho, H.-E., & Niemann, H. (2018). Vowel shortening in German as a function of syllable structure. Proceedings of 13. Phonetik und Phonologie Tagung. Humboldt University Berlin, Berlin, 28-29 September, 2017.
 
